--- a/24 - Sticky Nav/style-START.css
+++ b/24 - Sticky Nav/style-START.css
@@ -25,6 +25,15 @@ body {
   transition: transform 0.5s;
 }
 
+.fixed-nav .site-wrap {
+  transform: scale(1);
+}
+
+.fixed-nav nav{
+  position: fixed;
+  box-shadow: 0 px rgba(0,0,0,0.1);
+};
+
 header {
   text-align: center;
   height: 50vh;
@@ -85,4 +94,8 @@ nav a {
   color: white;
   transition: all 0.2s;
   text-transform: uppercase;
+}
+
+.fixed-nav li.logo {
+  max-width: 500px;
 }
